fix overflow and animation hiccups in safari

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  // overflow-x: hidden;
   background-color: $base-bg-color;
   color: $base-font-color;
   font-family: $base-font-family;
