--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -5,6 +5,10 @@ $header-height : 92px;
 
 *, *:before, *:after {@include box-sizing(border-box);}
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   background-color: $alt-bg-color;
