--- a/static/css/main.css
+++ b/static/css/main.css
@@ -561,7 +561,6 @@ tbody, caption {
 }
 
 body {
-  overflow-x: hidden;
   background-color: #f8f8f5;
   color: #564d58;
   font-family: "soleil", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
@@ -1741,6 +1740,10 @@ a.pswp__share--download:hover {
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
   background-color: #eceaed;
@@ -2083,7 +2086,6 @@ body.page--index {
   backface-visibility: hidden;
   -webkit-transition: opacity 550ms cubic-bezier(0.38, 0.15, 0.07, 1) 0ms, -webkit-transform 950ms cubic-bezier(0.38, 0.15, 0.07, 1) 0ms;
   transition: opacity 550ms cubic-bezier(0.38, 0.15, 0.07, 1) 0ms, transform 950ms cubic-bezier(0.38, 0.15, 0.07, 1) 0ms;
-  overflow-x: hidden;
 }
 .wf-loading .content-wrap {
   opacity: 0;
